--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p><a href="justdial.com/Hyderabad/Tirumala-Oxygen-Allied-Products-Near-Fathenagar-Railway-Gate-Sanath-Nagar/040PXX40-XX40-100428112545-X4D2_BZDET">Plz Visit for more info on Tirumala-Oxygen-Allied-Products</a></p>  
          </div>
 <div class="item2">
-    <a href="https://pranaygour.github.io/silicon-valley-project/">go backs</a>
+    <a href="https://pranaygour.github.io/silicon-valley-project/">go back</a>
 </div>
 
 
